Fix version compatibility